# bento-ordering-system

./: .dockerignore  .env  .env.example  .gitignore  API_SPECS.md  Dockerfile  README.md  TASK_COMPLETION_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start_codespaces.sh  test_codespaces.py
.devcontainer/: CODESPACES_GUIDE.md  README.md  devcontainer.json  docker-compose.yml  setup-simple.sh  setup.sh
alembic/: env.py
alembic/versions/: 29e332a5c65f_initial_migration.py  2e6f4384dac1_create_users_table_and_related_tables.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/admin/: __init__.py  menus.py
app/api/v1/dependencies/: auth.py
app/api/v1/endpoints/: __init__.py  auth.py  menus.py  orders.py
app/core/: config.py  security.py
app/crud/: __init__.py  auth.py  menu.py  order.py
app/db/: __init__.py  database.py  models.py
app/schemas/: README.md  __init__.py  admin.py  menu.py  order.py  user.py
app/scripts/: __init__.py  create_sample_data.py  create_store_user.py
docs/: CONFIGURATION.md
static/css/: style.css
static/js/: admin_menu.js  admin_order.js  auth.js  cart.js  menu.js  menu_backup.js
templates/: admin_menu.html  admin_order.html  cart.html  index.html  login.html
tests/: test_schemas.py
